@@ -233,7 +233,7 @@ namespace libtorrent
 
 	create_torrent::~create_torrent() {}
 
-	create_torrent::create_torrent(file_storage& fs, int piece_size, int pad_file_limit, int flags)
+	create_torrent::create_torrent(file_storage& fs, int piece_size, int pad_file_limit, int flags, int alignment)
 		: m_files(fs)
 		, m_creation_date(time(0))
 		, m_multifile(fs.num_files() > 1)
@@ -282,7 +282,7 @@ namespace libtorrent
 #endif
 		m_files.set_piece_length(piece_size);
 		if (flags & optimize)
-			m_files.optimize(pad_file_limit);
+			m_files.optimize(pad_file_limit, alignment);
 		m_files.set_num_pieces(static_cast<int>(
 			(m_files.total_size() + m_files.piece_length() - 1) / m_files.piece_length()));
 		m_piece_hash.resize(m_files.num_pieces());
